tests/paczka1/small_fuzzy/24984737.err
Error in line 4: 0oT S993 55,9
Error in line 14: v977vZBzW A65 411,5
